--- a/ansible-playbooks/yumRepoConfigure.yaml
+++ b/ansible-playbooks/yumRepoConfigure.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: localhost-2
+- hosts: redhosts
   become: true
   become_user: root
 
@@ -27,3 +27,4 @@
       description: base
       baseurl: file:/mount/BaseOS
       enabled: true
+  
