--- a/ansible-playbooks/downloadingfiles.yml
+++ b/ansible-playbooks/downloadingfiles.yml
@@ -7,6 +7,6 @@
   - name: Downloading files
     get_url:
       url: https://releases.ansible.com/ansible/ansible-2.9.25.tar.gz
-      dest: /home/bsuman/downloadedFile
+      dest: /home/bsuman/
 
 
