--- a/playbooks/fileHandlingSimple.yaml
+++ b/playbooks/fileHandlingSimple.yaml
@@ -60,3 +60,41 @@
 
 
         
+    - name: commenting existing port number in /etc/httpd/conf/httpd.conf
+      lineinfile:
+        path: /etc/httpd/conf/httpd.conf
+        regexp: '(?i)^(Listen.*)'
+        line: '# \1'     
+        backrefs: yes
+        state: present
+      tags:
+        - cmt
+
+   # Alternatively you can use --> regexp: '(?i)^(Listen\s+\d+)'
+   # '\1' refers to the text matched by the entire Listen directive that was matched by the regexp).
+   # \s is a shorthand character class that matches any whitespace character
+   # \d is a shorthand character class that matches any digit (0-9)
+   # + indicates that it should match one or more of the preceding token.
+
+
+    - name: commenting existing port number in /etc/httpd/conf/httpd.conf
+      lineinfile:
+        path: /root/httpd.conf
+        regexp: '^#\s+(Listen.*)'
+        line: '\1'     
+        backrefs: yes
+        state: present
+      tags:
+        - ucmt
+
+    - name: adding port
+      lineinfile:
+        path: /etc/httpd/conf/httpd.conf
+        insertafter: '^#Listen'
+        line: 'Listen 82'
+        state: present
+      tags:
+        - addport
+
+
+        
