--- a/playbooks/usingLoopsToCreateUsersNGroups.yaml
+++ b/playbooks/usingLoopsToCreateUsersNGroups.yaml
@@ -16,16 +16,17 @@
   - name: Creating users and adding to groups
     user:
      name : "{{ item.name }}"
+     password: "{{ item.password }}"
      state: present
      groups: "{{ item.groups }}"
     loop:
-      - { name: "elon", groups: "techgeeks" }
-      - { name: "mark", groups: "techgeeks" }
-      - { name: "jeff", groups: "techgeeks" }
-      - { name: "hugh", groups: "marvel" }
-      - { name: "chris", groups: "marvel" }
-      - { name: "robert", groups: "marvel" }
-      - { name: "jason", groups: "dcuniverse" }
-      - { name: "ben", groups: "dcuniverse" }
-      - { name: "clerk", groups: "dcuniverse"}
+      - { name: "elon", groups: "techgeeks", password: "{{ 'techgeeks' | password_hash('sha512') }}" }
+      - { name: "mark", groups: "techgeeks", password: "{{ 'techgeeks' | password_hash('sha512') }}" }
+      - { name: "jeff", groups: "techgeeks" ,password: "{{ 'techgeeks' | password_hash('sha512') }}" }
+      - { name: "hugh", groups: "marvel", password: "{{ 'marvel' | password_hash('sha512') }}"}
+      - { name: "chris", groups: "marvel", password: "{{ 'marvel' | password_hash('sha512') }}"}
+      - { name: "robert", groups: "marvel", password: "{{ 'marvel' | password_hash('sha512') }}"}
+      - { name: "jason", groups: "dcuniverse", password: "{{ 'dcuniverse' | password_hash('sha512') }}"}
+      - { name: "ben", groups: "dcuniverse", password: "{{ 'dcuniverse' | password_hash('sha512') }}"}
+      - { name: "clerk", groups: "dcuniverse", password: "{{ 'dcuniverse' | password_hash('sha512') }}"}
 
