copying with content

--- a/playbooks/copy_move_folder_files.yaml
+++ b/playbooks/copy_move_folder_files.yaml
@@ -42,3 +42,10 @@
 
       command: mv -f /root/testfolder /root/destination
 
+    - name: copying file with content
+      copy:
+        content: " This is content written from ansible controller node"
+        dest: /tmp/testfile.txt
+      tags:
+        - content
+
