--- a/playbooks/servicePortChange.yaml
+++ b/playbooks/servicePortChange.yaml
@@ -26,7 +26,7 @@
     firewalld:
       port: 82/tcp
       state: enabled
-      immediate: yes
+      immediate: yes    # reloads firewall (firewall-cmd --reload)
       permanent: true
 
 
