--- a/playbooks/logical-partition-conditional.yml
+++ b/playbooks/logical-partition-conditional.yml
@@ -1,46 +1,41 @@
-- name: checking vg 'research' with 1500M+ size requirement and creating lv 'data' in all nodes
-  hosts: all
-
-    # Before running below tasks, create volume group 'research' in managed nodes with different size
-    #
+---
+- hosts: all
 
   tasks:
-    - name: checking if volume group 'research' exists
+    - name: checking if vg 'research' exists
       debug:
-        msg: volume group 'research' does not exist
-      when: ansible_lvm.vgs.research is not defined                
+        msg: "Vg 'research' not found"
+      when: "ansible_lvm.vgs.research is not defined"
 
     - block:
-      - name: checking if 'research' size meets 1500MiB
-        debug:
-          msg: Insufficient space
-        when: ansible_lvm.vgs.research.free_g < "1500MiB"
-
-      - name: creating lv of 1500M when research volume > 1500MiB
+      - name: creating lvm with size 1500M
         lvol:
-            vg: research
-            lv: data
-            size: 1500M
-        when: ansible_lvm.vgs.research.free_g > "1500MiB"
+          vg: research
+          lv: data
+          size: 1500M
+        when: ansible_lvm.vgs.research.free_g >= "1.5"
 
-      - block:
-        - name: checking if 'research' size meets 800MiB
-          debug:
-            msg: Insufficient space
-          when: ansible_lvm.vgs.research.free_g < "800MiB"
+      - name: when lvm not created
+        debug:
+          msg: "Insufficient vg size"
+        when: ansible_lvm.vgs.research.free_g < "1.5"
 
-        - name: creating volume of size 800MiB
-          lvol:
-            vg: research
-            lv: data
-            size: 800M
-        when: ansible_lvm.vgs.research.free_g < "1500MiB"
+      - name: creating lvm with size 800M
+        lvol:
+          vg: research
+          lv: data
+          size: 800M
+        when: ansible_lvm.vgs.research.free_g < "1.5"
 
-      - name: formatting logical volume
-        filesystem:
-          device: /dev/research/data
-          fstype: ext4
+      when: "ansible_lvm.vgs.research is defined"
 
-      when: ansible_lvm.vgs.research is defined
+      always:
+        - name: formating lvm
+          filesystem:
+            device: /dev/research/data
+            fstype: ext4
+
+        
 
 
+      
