--- a/basic-ubuntu-setup.yml
+++ b/basic-ubuntu-setup.yml
@@ -24,7 +24,7 @@
           #  /home/bsuman/test/f1/d1/basedirectory10
 
 
-    - name: installing iputils and net-tools
+    - name: installing basic packages
       apt:
         name: "{{ item }}"
         state: present
@@ -32,6 +32,7 @@
         - iputils*
         - net-tools
         - aptitude
+        - tree
 
     - name: upgrading all packages using aptitude
       shell: "aptitude full-upgrade -y"
